Fix memory corruption introduced in cf1cc0b5bb356d7ce6a864237852cd4191ba833d

BUG:279078